fix header icons spacing

--- a/src/app/components/headers/header/header.component.scss
+++ b/src/app/components/headers/header/header.component.scss
@@ -38,6 +38,10 @@
     align-items: center;
     padding: 10px;
 
+    button{
+      margin-right: 8px;
+      margin-left: 8px;
+    }
     .buttons {
       display: flex;
       align-items: center;
@@ -48,8 +52,8 @@
 
       .button-language {
         min-width: unset;
-        margin-right: 15px;
-        margin-left: 15px;
+        // margin-right: 15px;
+        // margin-left: 15px;
       }
 
       .round-button {
